# solana-notary

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.gradle  build.gradle.kts  detekt.yml  gradle.properties  settings.gradle  settings.gradle.kts
.ci/: Jenkinsfile
admin-cli/: README.md  build.gradle  build.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: corda-java.gradle.kts  (+4 more)
clients/kotlin/: build.gradle  build.gradle.kts
common/: build.gradle  build.gradle.kts
gradle/: libs.versions.toml
java-client/: build.gradle.kts
kotlin-client/: build.gradle.kts
notary-program/: Anchor.toml  README.md  build.gradle  build.gradle.kts
notary-program/programs/corda-notary/: Cargo.toml  build.rs
notary-program/programs/corda-notary/src/: commit.rs  lib.rs  states.rs  types.rs
notary-program/programs/corda-notary/src/instructions/: create_network.rs  initialize.rs  mod.rs  revoke_notary.rs
notary-program/programs/corda-notary/tests/: test_authentication.rs  test_commit.rs  test_networks.rs
notary-program/programs/corda-notary/tests/test_utils/: admin_client.rs  macros.rs  mod.rs  notary_client.rs  test_helpers.rs
notary-test/: build.gradle.kts
program/: Anchor.toml  LICENSE  README.md  build.gradle.kts
solana-program/: Anchor.toml  README.md  build.gradle.kts
solana-program/programs/corda-notary/: Cargo.toml
solana-program/programs/corda-notary/src/: commit.rs  lib.rs
solana-program/programs/corda-notary/src/instructions/: authorize_notary.rs  commit.rs  initialize.rs  revoke_notary.rs
testing/: build.gradle.kts
(+100 files in other folders)
